Modified the package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moo-e2e",
+  "name": "protractor-cucumber-demo",
   "version": "1.0.0",
   "scripts":{
     "test": "./node_modules/.bin/protractor config/conf.js",
