--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts":{
     "test": "./node_modules/.bin/protractor config/conf.js",
+    "paralleltest": "./node_modules/.bin/protractor config/parallelConf.js",
     "webdriver-update": "./node_modules/.bin/webdriver-manager update",
     "webdriver-start": "./node_modules/.bin/webdriver-manager start"
   },
