--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "protractor-cucumber-demo",
   "version": "1.0.0",
-  "scripts":{
+  "scripts": {
     "test": "./node_modules/.bin/protractor config/conf.js",
     "paralleltest": "./node_modules/.bin/protractor config/parallelConf.js",
     "webdriver-update": "./node_modules/.bin/webdriver-manager update",
@@ -10,10 +10,12 @@
   "author": "Sripathi Pai",
   "dependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "cucumber": "^2.3.0",
+    "cucumber-html-reporter": "^0.5.2",
     "protractor": "^5.1.1",
     "protractor-cucumber-framework": "^3.1.0",
-    "chai-as-promised": "^6.0.0",
-    "cucumber-html-reporter": "^0.5.2"
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
